--- a/package.json
+++ b/package.json
@@ -38,18 +38,35 @@
     "@shopify/theme-variants": "^1.0.0-alpha.8",
     "bulma": "^0.7.4",
     "debounce": "^1.2.0",
-    "jquery": "^3.2.1",
+    "jquery": "^3.6.0",
     "kind-of": "^6.0.3",
-    "lazysizes": "^4.1.8",
+    "lazysizes": "^5.3.2",
     "lodash-es": "^4.17.4",
     "normalize.css": "^7.0.0",
     "os-homedir": "^2.0.0",
-    "qrcode": "^1.3.2",
+    "qrcode": "^1.4.4",
     "qs": "^6.7.0",
     "v-click-outside": "^2.1.3",
     "vue": "^2.6.10",
     "vue-awesome-swiper": "^3.1.3",
     "vue-scrollto": "^2.15.0"
+  },
+  "resolutions": {
+    "merge": "2.1.1",
+    "@shopify/slate-tools/**/xmlhttprequest-ssl": "1.6.2",
+    "@shopify/slate-tools/**/axios": "^0.21.1",
+    "@shopify/slate-tools/**/yargs-parser": "18.1.2",
+    "@shopify/slate-tools/**/serialize-javascript": "^5.0.1",
+    "@shopify/slate-tools/**/decompress": "^4.2.1",
+    "@shopify/slate-tools/**/minimist": "1.2.3",
+    "@shopify/slate-tools/**/mem": "8.1.1",
+    "@shopify/slate-tools/**/js-yaml": "^4.1.0",
+    "@shopify/slate-tools/js-yaml": "^4.1.0",
+    "@shopify/slate-tools/**/braces": "^3.0.2",
+    "@shopify/slate-tools/**/react-dev-utils": "5.0.2",
+    "@shopify/slate-tools/**/tunnel-agent": "^0.6.0",
+    "@shopify/slate-tools/**/ssri": "^8.0.1"
+
   },
   "scripts": {
     "start": "slate-tools start",
